sonar bug fixes